--- a/package.json
+++ b/package.json
@@ -11,19 +11,18 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "axios": "^0.16.2",
     "body-parser": "^1.18.2",
+    "chalk": "^2.3.0",
     "express": "^4.16.2",
     "pg": "^7.3.0",
     "react": "^16.0.0",
     "react-dom": "^16.0.0",
-    "react-router": "^4.2.0",
+    "react-redux": "^5.0.6",
     "react-router-dom": "^4.2.2",
     "redux": "^3.7.2",
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.2.0",
-    "sequelize": "^4.15.0",
-    "volleyball": "^1.4.1"
+    "sequelize": "^4.15.0"
   },
   "devDependencies": {
     "babel-core": "^6.26.0",
@@ -33,6 +32,8 @@
     "css-loader": "^0.28.7",
     "node-sass": "^4.5.3",
     "sass-loader": "^6.0.6",
-    "style-loader": "^0.19.0"
+    "style-loader": "^0.19.0",
+    "volleyball": "^1.4.1",
+    "webpack": "^3.8.1"
   }
 }
