--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start:dev": "webpack -w & nodemon server"
+    "start:dev": "webpack -w & nodemon main"
   },
   "keywords": [],
   "author": "",
@@ -14,7 +14,7 @@
     "body-parser": "^1.18.2",
     "chalk": "^2.3.0",
     "express": "^4.16.2",
-    "pg": "^7.3.0",
+    "pg": "^6.4.1",
     "react": "^16.0.0",
     "react-dom": "^16.0.0",
     "react-redux": "^5.0.6",
