--- a/package.json
+++ b/package.json
@@ -1,29 +1,28 @@
 {
-  "name": "live-review-senior-checkpoint",
+  "name": "Project Name",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "webpack -w & nodemon main.js"
+    "start:dev": "webpack -w & nodemon main"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "axios": "^0.16.2",
     "body-parser": "^1.18.2",
+    "chalk": "^2.3.0",
     "express": "^4.16.2",
-    "pg": "^7.3.0",
+    "pg": "^6.4.1",
     "react": "^16.0.0",
     "react-dom": "^16.0.0",
-    "react-router": "^4.2.0",
+    "react-redux": "^5.0.6",
     "react-router-dom": "^4.2.2",
     "redux": "^3.7.2",
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.2.0",
-    "sequelize": "^4.15.0",
-    "volleyball": "^1.4.1"
+    "sequelize": "^4.15.0"
   },
   "devDependencies": {
     "babel-core": "^6.26.0",
@@ -31,8 +30,8 @@
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
     "css-loader": "^0.28.7",
-    "node-sass": "^4.5.3",
-    "sass-loader": "^6.0.6",
-    "style-loader": "^0.19.0"
+    "style-loader": "^0.19.0",
+    "volleyball": "^1.4.1",
+    "webpack": "^3.8.1"
   }
 }
