--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^0.17.1",
     "body-parser": "^1.18.2",
     "chalk": "^2.3.0",
     "express": "^4.16.2",
@@ -31,6 +32,7 @@
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
     "css-loader": "^0.28.7",
+    "redux-devtools-extension": "^2.13.2",
     "style-loader": "^0.19.0",
     "volleyball": "^1.4.1",
     "webpack": "^3.8.1"
